[gd_scene load_steps=54 format=3 uid="uid://cqpb007w10uv0"]

[ext_resource type="Texture2D" uid="uid://boir4mni7hj1s" path="res://Assets/Factions/Knights/Troops/Pawn/Red/Pawn_Red.png" id="1_e325i"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_w6v3m"]
[ext_resource type="Texture2D" uid="uid://gmfav5nqmgix" path="res://Assets/Factions/Knights/Troops/Dead/Dead.png" id="3_vsvfp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hjqg6"]
atlas = ExtResource("1_e325i")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_am0x7"]
atlas = ExtResource("1_e325i")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_me7mw"]
atlas = ExtResource("1_e325i")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_guolb"]
atlas = ExtResource("1_e325i")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynjdv"]
atlas = ExtResource("1_e325i")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3u05"]
atlas = ExtResource("1_e325i")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlukl"]
atlas = ExtResource("1_e325i")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk44y"]
atlas = ExtResource("1_e325i")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaitu"]
atlas = ExtResource("1_e325i")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltesv"]
atlas = ExtResource("1_e325i")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u1kb"]
atlas = ExtResource("1_e325i")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnubv"]
atlas = ExtResource("1_e325i")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvpxw"]
atlas = ExtResource("3_vsvfp")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jq5g"]
atlas = ExtResource("3_vsvfp")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3t86"]
atlas = ExtResource("3_vsvfp")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yuvt"]
atlas = ExtResource("3_vsvfp")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtnj2"]
atlas = ExtResource("3_vsvfp")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs0jy"]
atlas = ExtResource("3_vsvfp")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblp4"]
atlas = ExtResource("3_vsvfp")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cua5r"]
atlas = ExtResource("3_vsvfp")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku8og"]
atlas = ExtResource("3_vsvfp")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohl4o"]
atlas = ExtResource("3_vsvfp")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyjui"]
atlas = ExtResource("3_vsvfp")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yh6s"]
atlas = ExtResource("3_vsvfp")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rixn5"]
atlas = ExtResource("3_vsvfp")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l50i"]
atlas = ExtResource("3_vsvfp")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3odo"]
atlas = ExtResource("1_e325i")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d0gn"]
atlas = ExtResource("1_e325i")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhptb"]
atlas = ExtResource("1_e325i")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngtp1"]
atlas = ExtResource("1_e325i")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewlj4"]
atlas = ExtResource("1_e325i")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8fte"]
atlas = ExtResource("1_e325i")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_15fq8"]
atlas = ExtResource("1_e325i")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne75g"]
atlas = ExtResource("1_e325i")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn7gn"]
atlas = ExtResource("1_e325i")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv5c2"]
atlas = ExtResource("1_e325i")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx36i"]
atlas = ExtResource("1_e325i")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmlhg"]
atlas = ExtResource("1_e325i")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_6xsk3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjqg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am0x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me7mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guolb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynjdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3u05")
}],
"loop": false,
"name": &"pawn_attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlukl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk44y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaitu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltesv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u1kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnubv")
}],
"loop": false,
"name": &"pawn_attack_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvpxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jq5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3t86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yuvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtnj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs0jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cua5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku8og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohl4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyjui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yh6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rixn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l50i")
}],
"loop": false,
"name": &"pawn_dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3odo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d0gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhptb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngtp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewlj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8fte")
}],
"loop": true,
"name": &"pawn_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15fq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne75g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn7gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv5c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx36i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmlhg")
}],
"loop": true,
"name": &"pawn_running",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wnam"]
size = Vector2(32, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_riw15"]
size = Vector2(50, 16.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dd6cw"]
size = Vector2(50, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_wm507"]
radius = 11.0

[sub_resource type="Animation" id="Animation_v5qes"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("detector_ray:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_twjtf"]
resource_name = "detetion_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("detector_ray:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mi2xy"]
_data = {
"RESET": SubResource("Animation_v5qes"),
"detection_animation": SubResource("Animation_twjtf")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ak5fk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmddp"]
bg_color = Color(0.856494, 3.65794e-06, 8.66354e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uoxl0"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hibil"]
bg_color = Color(1, 1, 1, 1)

[node name="enemy" type="CharacterBody2D"]
z_index = 5
y_sort_enabled = true
script = ExtResource("1_w6v3m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6xsk3")
animation = &"pawn_idle"
autoplay = "pawn_idle"

[node name="attack_area_collision" type="Area2D" parent="AnimatedSprite2D"]
monitoring = false

[node name="attack_collision" type="CollisionShape2D" parent="AnimatedSprite2D/attack_area_collision"]
position = Vector2(38, 0)
shape = SubResource("RectangleShape2D_5wnam")

[node name="attack_collision_1" type="CollisionShape2D" parent="AnimatedSprite2D/attack_area_collision"]
position = Vector2(-3, 29.75)
shape = SubResource("RectangleShape2D_riw15")

[node name="attack_collision_2" type="CollisionShape2D" parent="AnimatedSprite2D/attack_area_collision"]
position = Vector2(-3, -29)
shape = SubResource("RectangleShape2D_dd6cw")

[node name="body_collision" type="CollisionShape2D" parent="."]
z_index = 5
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_wm507")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="detector_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mi2xy")
}
autoplay = "detection_animation"

[node name="detector_ray" type="RayCast2D" parent="."]
position = Vector2(-7.62939e-06, 7.62939e-06)
target_position = Vector2(221, -7.62939e-06)

[node name="health_bar" type="ProgressBar" parent="."]
z_index = 1
offset_left = -40.0
offset_top = -32.0
offset_right = 40.0
offset_bottom = -30.0
theme_override_styles/background = SubResource("StyleBoxEmpty_ak5fk")
theme_override_styles/fill = SubResource("StyleBoxFlat_qmddp")
value = 100.0
show_percentage = false

[node name="damage_bar" type="ProgressBar" parent="health_bar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_uoxl0")
theme_override_styles/fill = SubResource("StyleBoxFlat_hibil")
value = 80.0
show_percentage = false

[node name="damage_bar_timer" type="Timer" parent="health_bar"]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="AnimatedSprite2D/attack_area_collision" to="." method="_on_attack_area_collision_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="health_bar/damage_bar_timer" to="." method="_on_damage_bar_timer_timeout"]
